--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "json-server-api",
+  "name": "json-server-node",
   "version": "1.0.0",
+  "description": "JSON Server deployed on Render",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server --watch db.json --port $PORT"
+    "start": "node server.js"
   },
+  "keywords": [
+    "json-server",
+    "api",
+    "render"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.3"
+    "json-server": "^0.17.3"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
